# claudometer

./: .gitignore  .release-please-config.json  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  LICENSE  README.md  UPDATER_SIGNING.md  app.config.ts  biome.json  forge.config.ts  package.json  tsconfig.json  vite.config.ts  vite.main.config.ts  vite.preload.config.ts  vite.settings.config.ts
.claude/commands/: release.md
.github/workflows/: build.yml  bundles-smoke.yml  checks.yml  release-please.yml  release.yml  sync-versions-release-pr.yml
assets/: tray-icon.icns
openspec/changes/refactor-migrate-to-tauri/: design.md  proposal.md  tasks.md
openspec/changes/refactor-migrate-to-tauri/specs/desktop-autostart/: spec.md
scripts/: generate-latest-json.ts  generate-updater-keypair.sh  release.sh  sync-versions.ts
src/: main.ts  smoke.test.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app.rs  claude.rs  codex.rs  commands.rs  lib.rs  main.rs  notifications.rs  provider_view.rs  redact.rs  settings.rs  tray.rs  types.rs  updater.rs  usage_alerts.rs  windows.rs
src-tauri/src/commands/: mod.rs  settings.rs  updates.rs
src-tauri/src/fixtures/: codex_oauth_usage_ok.json  codex_rpc_rate_limits_ok.json  oauth_usage_null_models.json  oauth_usage_ok.json
src-tauri/src/refresh/: fetch.rs  mod.rs  policy.rs  refresh_loop.rs
src-tauri/src/state/: app_state.rs  mod.rs  refresh_bus.rs  secret_manager.rs
src-tauri/src/tray/: formatters.rs  menu_builder.rs  mod.rs
src/common/: cliParser.test.ts  cliParser.ts  fetch-with-timeout.ts  ipc.ts  nearLimitAlerts.test.ts  nearLimitAlerts.ts  parser.test.ts  parser.ts  sanitization.ts  types.ts
src/main/: app-controller.ts  appController.ts  claudeWebUsageClient.ts  index.ts  main.ts  sessionKeyStore.ts  settings.ts  settingsWindow.ts  tray.ts
src/main/ipc/: register.ts
src/main/services/: claude-api.ts  claudeApi.ts  claudeCli.ts  claudeOAuthApi.ts  notificationSound.test.ts  notificationSound.ts  session-key.ts  sessionKey.ts  settings.ts  terminalBell.ts  usageNotification.ts
src/main/windows/: settings-window.ts  settingsWindow.ts
src/preload/: preload.ts
src/renderer/: global.d.ts
src/renderer/settings/: index.html  main.ts  styles.css
src/services/: claude-api.ts  session-key.ts  settings.ts
src/shared/: claudeUsage.ts  parser.test.ts  usageParser.test.ts  usageParser.ts
src/ui/: tray.ts
src/ui/settings-window/: settings.html  window.ts
(+4 files in other folders)
